--- a/html/index.html
+++ b/html/index.html
@@ -10,23 +10,25 @@
 </head>
 <body>
 
-<form action="">
+<form action="https://formspree.io/f/xknkjdaa/" method="post">
 
     <fieldset>
         <legend>FORMULARIO DE CONTATO</legend>
-        <label for="name">nome:</label>
-            <br>
 
-        <input id="name" type="text" name="email">
-            <br>
-            <br>
-        <label for="email">e-mail</label>
-            <br>
-        <input id="email" type="email" name="email">
-            <br>
-            <br>
-       
+        <label for="nome">nome:</label>
+        <input type="text" id="nome">
 
+<br>
+<br>
+        <label for="email">Email:</label>
+        <input name="Email" id="email" type="email">
+        <br>
+   <br>      
+   <label for="text">mensagem:</label>
+        <textarea name="Text" id="text" cols="19" rows="5"></textarea>
+<br>
+<br>
+        <button type="submit">Enviar</button>
     </fieldset>
 
 </form>
