--- a/html/index.html
+++ b/html/index.html
@@ -15,17 +15,16 @@
     <fieldset>
         <legend>FORMULARIO DE CONTATO</legend>
 
-        <label for="nome">nome:</label>
-        <input type="text" id="nome">
+        <input placeholder="nome" type="text" id="nome">
 
 <br>
 <br>
-        <label for="email">Email:</label>
-        <input name="Email" id="email" type="email">
+       
+        <input placeholder="email" name="Email" id="email" type="email">
         <br>
    <br>      
-   <label for="text">mensagem:</label>
-        <textarea name="Text" id="text" cols="19" rows="5"></textarea>
+   
+        <textarea placeholder="mensagem" name="Text" id="text" cols="19" rows="5"></textarea>
 <br>
 <br>
         <button type="submit">Enviar</button>
